--- a/MonoGame-StackRipoff/MonoGame-StackRipoff.csproj
+++ b/MonoGame-StackRipoff/MonoGame-StackRipoff.csproj
@@ -39,6 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Animator.cs" />
+    <Compile Include="CircularArray.cs" />
     <Compile Include="CubeFactory.cs" />
     <Compile Include="Easing.cs" />
     <Compile Include="Game1.cs" />
@@ -46,7 +47,9 @@
     <Compile Include="PrismBouncer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RectangularPrism.cs" />
     <Compile Include="RectangularPrismFactory.cs" />
+    <Compile Include="SceneColors.cs" />
     <Compile Include="Size3.cs" />
     <Compile Include="Stack.cs" />
   </ItemGroup>
