--- a/MonoGame-StackRipoff/MonoGame-StackRipoff.csproj
+++ b/MonoGame-StackRipoff/MonoGame-StackRipoff.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Easing.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="KeyboardEvents.cs" />
+    <Compile Include="PrismBounceAxis.cs" />
     <Compile Include="PrismBouncer.cs" />
     <Compile Include="PrismPlayResult.cs" />
     <Compile Include="Program.cs" />
