--- a/VisualTests/VisualTests.csproj
+++ b/VisualTests/VisualTests.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{F569ABA6-2591-480B-A617-DB185C90D1D2}</ProjectGuid>
+    <ProjectGuid>{AD7CC34A-AF0B-43E0-B76A-B2958DC6C2D0}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MonoGame_StackRipoff</RootNamespace>
-    <AssemblyName>MonoGame-StackRipoff</AssemblyName>
+    <RootNamespace>VisualTests</RootNamespace>
+    <AssemblyName>VisualTests</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>Windows</MonoGamePlatform>
     <MonoGameContentBuilderExe>
@@ -38,24 +38,11 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Animator.cs" />
-    <Compile Include="CircularArray.cs" />
-    <Compile Include="CubeFactory.cs" />
-    <Compile Include="Easing.cs" />
+    <Compile Include="RectangularRing.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="KeyboardEvents.cs" />
-    <Compile Include="PrismBounceAxis.cs" />
-    <Compile Include="PrismBouncer.cs" />
-    <Compile Include="PrismOverlapResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RectangularPrism.cs" />
-    <Compile Include="RectangularPrismFactory.cs" />
-    <Compile Include="RectangularRing.cs" />
     <Compile Include="RectangularRingBurst.cs" />
-    <Compile Include="SceneColors.cs" />
-    <Compile Include="Size3.cs" />
-    <Compile Include="Stack.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -69,6 +56,12 @@
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MonoGame-StackRipoff\MonoGame-StackRipoff.csproj">
+      <Project>{f569aba6-2591-480b-a617-db185c90d1d2}</Project>
+      <Name>MonoGame-StackRipoff</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
